--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>A Pen by  mzimmerman0</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="styles/style.css">
 
 </head>
 <body>
@@ -56,7 +56,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script  src="js/index.js"></script>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="scripts/script.js"></script>
 
 </body>
 </html>
