--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 
 <div id="previewScreen">(default msg)
-  <a href="#" id="cancelPreview">cancel!</a>
+  <a href="index.html" id="cancelPreview">cancel!</a>
 </div>
 
   
